# multilingual-alignment-eval

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  api_server.py  dashboard.py  docker-compose.yml  mleval.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.json
docs/: adding_languages.md  api_reference.md  architecture.md  custom_metrics.md
scripts/: ab_testing.py  bias_detection.py  cost_optimization.py  data_processing.py  evaluate.py  model_adapters.py  monitoring.py  prompt_manager.py  visualization.py
tests/: test_all.py
